TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/Accelerator/out/includes/ReduceTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef ReduceTest_HXX
#define ReduceTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif